# sg

./: .gitignore  Cargo.toml  README.md  count_lines.sh  vk_layer_settings.txt
ecs/: Cargo.toml
ecs/src/: archetype.rs  bitset.rs  borrows.rs  entity.rs  executor.rs  lib.rs  query.rs  scheduler.rs  system.rs  thread_pool.rs  world.rs
ecs/tests/: test.rs
ecs_macros/: Cargo.toml
ecs_macros/src/: lib.rs
rmanage/: Cargo.toml
rmanage/src/: .lib.rs.rustfmt  lib.rs
sg/: Cargo.toml
sg/src/: main.rs
sg/src/chess/: game.rs  message.rs  mod.rs  numeric_enum.rs  serialization.rs
sg/src/components/: mod.rs
sg/src/systems/: mod.rs
sg/src/systems/graphics/: camera.rs  convolution.rs  convolution.wgsl  cubemap.rs  cubemap.wgsl  desc.rs  g_buffer.rs  g_buffer.wgsl  gltf.rs  mesh_manager.rs  mod.rs  pipeline.rs  renderer.rs  shader.wgsl  texture_manager.rs
src/: main.rs  utils.rs
src/ecs/: mod.rs
src/ecs/components/: mod.rs
src/ecs/systems/: mod.rs
