[package]
name = "ecs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = {version = "1.0.0", features = ["v4", "fast-rng"]}
log = "0.4.16"
ecs_macros = { path = "../ecs_macros" }
parking_lot = "0.12.1"
slotmap = "1.0.6"

[features]
extended_limits = []
