[package]
name = "rmanage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
parking_lot = "0.12.1"
slotmap = { version = "1.0.6", features = ["serde"] }
bimap = { version = "0.6.2", features = ["serde"] }
twox-hash = { version = "1.6.3", features = ["serde"] }
directories = "4.0.1"
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }
rand = "0.8.5"

[dev-dependencies]
mktemp = "0.4.1"
